--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -7,7 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Entities\" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.11" />
+      <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="8.0.11" />
     </ItemGroup>
 
 </Project>
