--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=127.0.0.1,1433;Database=Master;User Id=SA;Password=safe-pass123;Initial Catalog= examination;Encrypt=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
