add: Auth controller

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=127.0.0.1,1433;Database=Master;User Id=SA;Password=safe-pass123;Initial Catalog= examination;Encrypt=True;TrustServerCertificate=True"
   },
+  "Jwt": {
+    "Issuer": "greyBeast",
+    "Audience": "IDK",
+    "Secret": "I declare you secure; I declare you secure; twice!!"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
