--- a/compose.yaml
+++ b/compose.yaml
@@ -9,6 +9,13 @@
       - "1433:1433"
     volumes:
       - sql_data:/var/opt/mssql
+  
+  mailserver:
+    image: rnwood/smtp4dev
+    container_name: mail-server
+    ports:
+      - "5000:80"
+      - "2525:25"
 
 volumes:
   sql_data:
