adding the rabbit

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,6 +7,12 @@
     "Audience": "IDK",
     "Secret": "I declare you secure; I declare you secure; twice!!"
   },
+  "RabbitMQ": {
+    "URI": "amqp://greybeast:string123@localhost:5672",
+    "RoutingKey": "evaluate",
+    "ExchangeName": "Examination",
+    "QueueName": "student-solutions"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
