--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -13,4 +13,10 @@
         <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="8.0.11"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="RabbitMQ.Client">
+        <HintPath>..\..\..\..\.nuget\packages\rabbitmq.client\7.0.0\lib\net8.0\RabbitMQ.Client.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
