--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -11,7 +11,15 @@
     "URI": "amqp://greybeast:string123@localhost:5672",
     "RoutingKey": "evaluate",
     "ExchangeName": "Examination",
-    "QueueName": "student-solutions"
+    "QueueName": "student-solutions",
+    "SignalR": {
+      "Auth": {
+        "Email": "rabbitmq@example.com",
+        "Password": "string123",
+        "EndPoint": "http://localhost:5270/api/auth/login"
+      },
+      "ServerUrl": "http://localhost:5270/notification"
+    }
   },
   "Logging": {
     "LogLevel": {
