--- a/compose.yaml
+++ b/compose.yaml
@@ -21,17 +21,27 @@
       RABBITMQ_DEFAULT_PASS: string123
     volumes:
       - rabbit_data:/var/lib/rabbitmq
+  api:
+    image: api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Docker
+    build:
+      context: .
+      dockerfile: API/Dockerfile
+    ports:
+      - "8080:8080"
+      - "8081:8081"
+  webUI:
+    image: ui
+    build:
+      dockerfile: Web.UI/Dockerfile
+    ports:
+      - "4200:4200"
 
 volumes:
   sql_data:
     driver: local
   rabbit_data:
-
-#  api:
-#    image: api
-#    build:
-#      context: .
-#      dockerfile: API/Dockerfile
 
 #  mailserver:
 #    image: rnwood/smtp4dev
