update: evaluation-service config

--- a/API/appsettings.Docker.json
+++ b/API/appsettings.Docker.json
@@ -8,7 +8,7 @@
     "Secret": "I declare you secure; I declare you secure; twice!!"
   },
   "RabbitMQ": {
-    "URI": "amqp://greybeast:string123@localhost:5672",
+    "URI": "amqp://greybeast:string123@rabbit:5672",
     "RoutingKey": "evaluate",
     "ExchangeName": "Examination",
     "QueueName": "student-solutions",
@@ -16,9 +16,9 @@
       "Auth": {
         "Email": "rabbitmq@example.com",
         "Password": "string123",
-        "EndPoint": "http://localhost:5270/api/auth/login"
+        "EndPoint": "web-api:8080/api/auth/login"
       },
-      "ServerUrl": "http://localhost:5270/notification"
+      "ServerUrl": "web-api:8080/notification"
     }
   },
   "Logging": {
