--- a/RabbitEvaluator/appsettings.Development.json
+++ b/RabbitEvaluator/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sql-server-db,1433;Database=Master;User Id=SA;Password=safe-pass123;Initial Catalog= examination;Encrypt=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=127.0.0.1,1433;Database=Master;User Id=SA;Password=safe-pass123;Initial Catalog= examination;Encrypt=True;TrustServerCertificate=True"
   },
   "Jwt": {
     "Issuer": "greyBeast",
@@ -8,7 +8,7 @@
     "Secret": "I declare you secure; I declare you secure; twice!!"
   },
   "RabbitMQ": {
-    "URI": "amqp://greybeast:string123@rabbit:5672",
+    "URI": "amqp://greybeast:string123@localhost:5672",
     "RoutingKey": "evaluate",
     "ExchangeName": "Examination",
     "QueueName": "student-solutions",
@@ -16,9 +16,9 @@
       "Auth": {
         "Email": "rabbitmq@example.com",
         "Password": "string123",
-        "EndPoint": "webserver:8080/api/auth/login"
+        "EndPoint": "http://localhost:5270/api/auth/login"
       },
-      "ServerUrl": "webserver:8080/notification"
+      "ServerUrl": "http://localhost:5270/notification"
     }
   },
   "Logging": {
