--- a/RabbitEvaluator/appsettings.Docker.json
+++ b/RabbitEvaluator/appsettings.Docker.json
@@ -16,9 +16,9 @@
       "Auth": {
         "Email": "rabbitmq@example.com",
         "Password": "string123",
-        "EndPoint": "webserver:8080/api/auth/login"
+        "EndPoint": "http://webserver:8080/api/auth/login"
       },
-      "ServerUrl": "webserver:8080/notification"
+      "ServerUrl": "http://webserver:8080/notification"
     }
   },
   "Logging": {
