impl: cache-aside pattern

--- a/API/appsettings.Docker.json
+++ b/API/appsettings.Docker.json
@@ -21,6 +21,9 @@
       "ServerUrl": "webserver:8080/notification"
     }
   },
+  "Cache": {
+    "Default": "00:01:00"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
