--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -21,6 +21,9 @@
       "ServerUrl": "http://localhost:5270/notification"
     }
   },
+  "Cache": {
+    "Default": "00:01:00"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
