connect: with mongo for notifications

--- a/API/appsettings.Docker.json
+++ b/API/appsettings.Docker.json
@@ -1,7 +1,9 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sql-server-db,1433;Database=Master;User Id=SA;Password=safe-pass123;Initial Catalog= examination;Encrypt=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=sql-server-db,1433;Database=Master;User Id=SA;Password=safe-pass123;Initial Catalog= examination;Encrypt=True;TrustServerCertificate=True",
+    "MongoDb": "mongodb://mongodb:27017/AppNotification"
   },
+  "MongoDbName": "AppNotification",
   "Jwt": {
     "Issuer": "greyBeast",
     "Audience": "IDK",
