--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -16,6 +16,8 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="MongoDB.Bson" Version="3.1.0"/>
+        <PackageReference Include="MongoDB.Driver" Version="3.1.0"/>
         <PackageReference Include="RabbitMQ.Client" Version="7.0.0"/>
     </ItemGroup>
 
