--- a/compose.yaml
+++ b/compose.yaml
@@ -9,6 +9,17 @@
       - "1433:1433"
     volumes:
       - sql_data:/var/opt/mssql
+  mongodb:
+    container_name: mongodb
+    image: mongo
+    ports:
+      - '27017:27017'
+    command: [ "mongod", "--port", "27017", "--noauth" ]
+    environment:
+      MONGO_INITDB_DATABASE: AppNotification
+    volumes:
+      - mongo_data:/data/db
+
   rabbitmq:
     container_name: rabbit
     image: rabbitmq:3-management
@@ -30,7 +41,6 @@
     ports:
       - "8080:8080"
       - "8081:8081"
-  
   webui:
     build:
       context: Web.UI
@@ -49,6 +59,8 @@
 
 volumes:
   sql_data:
+    driver: local
+  mongo_data:
     driver: local
   rabbit_data:
   
