--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -13,6 +13,7 @@
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="13.0.1"/>
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0"/>
+        <PackageReference Include="MediatR" Version="12.4.1"/>
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.2.1"/>
     </ItemGroup>
 
@@ -20,6 +21,10 @@
         <Reference Include="Microsoft.AspNetCore.Authentication.JwtBearer">
             <HintPath>..\..\..\..\.nuget\packages\microsoft.aspnetcore.authentication.jwtbearer\8.0.11\lib\net8.0\Microsoft.AspNetCore.Authentication.JwtBearer.dll</HintPath>
         </Reference>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Folder Include="Commands\Notification.Admin\"/>
     </ItemGroup>
 
 </Project>
